src/objects/Measurements__c.object
<CustomObject>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Front_Back__c</fullName>
        <label>Front Back</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Left_Right__c</fullName>
        <label>Left Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wobble__c</fullName>
        <label>Wobble</label>
        <referenceTo>Wobble__c</referenceTo>
        <relationshipLabel>Measurements</relationshipLabel>
        <relationshipName>Measurements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Measurements</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Measurements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>